2.1.0/_sources/gallery/subplots_axes_and_figures/invert_axes.rst.txt


.. _sphx_glr_gallery_subplots_axes_and_figures_invert_axes.py:


===========
Invert Axes
===========

You can use decreasing axes by flipping the normal order of the axis
limits




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_invert_axes_001.png
    :align: center





.. code-block:: python


    import matplotlib.pyplot as plt
    import numpy as np

    t = np.arange(0.01, 5.0, 0.01)
    s = np.exp(-t)
    plt.plot(t, s)

    plt.xlim(5, 0)  # decreasing time

    plt.xlabel('decreasing time (s)')
    plt.ylabel('voltage (mV)')
    plt.title('Should be growing...')
    plt.grid(True)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.019 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: invert_axes.py <invert_axes.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: invert_axes.ipynb <invert_axes.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
